buttons and links and speech control

--- a/test.html
+++ b/test.html
@@ -22,6 +22,7 @@
 					<li><a href="http://www.stumbleupon.com/">StumbleUpon</a></li>							
 				</ul>
 			</div>
+			<button type="button">Click Me!</button>
 		</header>
 
 
@@ -38,6 +39,7 @@
 				sdfjhskdjfhksjdhfksjdhfksjdfhksjdhfksf
 				sdfkjhskdjfhskjdfhksjdhfkjsdhfks
 				sjfhksjdhfkjsdhfkjsdhfkjshdfkjshdfkshfd</p>	
+				<button type="button">Click Me Again!</button>
 		</div>
 
 	
