added input field controls and change options midway

--- a/test.html
+++ b/test.html
@@ -21,6 +21,8 @@
 					<li><a href="http://foodgawker.com/">Food Gawker</a></li>
 					<li><a href="http://www.stumbleupon.com/">StumbleUpon</a></li>							
 				</ul>
+				<input type="text" name="First Name">
+				</input>
 			</div>
 			<button type="button">Click Me!</button>
 		</header>
