--- a/demo_test.html
+++ b/demo_test.html
@@ -5,11 +5,12 @@
   		<title>TTS Widget Test Website for Demo</title>
     </head>
 
-	<body style="PADDING-LEFT:450px;">
+	<body style="PADDING-LEFT:400px; PADDING-TOP: 30px;">
 		<header>
 			<div id="title">
 				<h1>Demo Website</h1>
-				<h3>This webpage was built to demo my <a href= "http://en.wikipedia.org/wiki/Speech_synthesis">text-to-speech</a> widget. <br>I built this for my <a href="http://cs.brown.edu/courses/csci1300/">User Interface</a> class.</h3>
+				<h3>This webpage was built to demo my <a href= "http://en.wikipedia.org/wiki/Speech_synthesis">text-to-speech</a> widget. <br>I built this for my <a href="http://cs.brown.edu/courses/csci1300/">User Interface</a> class.</h3> 
+				<p>Press <b>Ctrl+Shift+S</b> to start text-to-speech mode. <br> Press <b>Ctrl+Shift+S</b> again to quit text-to-speech mode at any time. </p>
 			</div>
 			<div id="form" style = "border:1px solid black; max-width:150px; left: 50px; MARGIN-TOP:50px; PADDING:20px;">
 				<div style="PADDING: 5px">
@@ -17,9 +18,6 @@
 				</div>
 				<div style="PADDING: 5px">
 					<label>Last Name: </label><input type="text" name="Last Name"></input><br>
-				</div>
-				<div style="PADDING: 5px">
-					<label>Email: </label><input type="text" name="Email"></input><br>
 				</div>
 				<div style="PADDING: 10px">
 					<button type="button" onclick="alert('Submitted!')">Submit</button>
